--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-redux": "^7.1.16",
     "@types/react-select": "^4.0.13",
     "axios": "^0.21.1",
+    "comlink": "^4.3.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
