--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,8 +6,9 @@
   "extends": [
     "airbnb",
     "plugin:react/recommended",
+    "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
-    "prettier/react",
+    "plugin:@typescript-eslint/recommended",
     "prettier/@typescript-eslint",
     "plugin:prettier/recommended"
   ],
@@ -23,6 +24,8 @@
   "plugins": ["react", "@typescript-eslint", "prettier"],
   "root": true,
   "rules": {
+    "no-shadow": "off",
+    "@typescript-eslint/no-shadow": "error",
     "@typescript-eslint/no-use-before-define": ["error"],
     "comma-dangle": [
       "error",
@@ -52,7 +55,8 @@
     "max-len": ["error", 120],
     "prettier/prettier": "error",
     "react/jsx-filename-extension": [2, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }],
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "import/prefer-default-export": "off"
   },
   "settings": {
     "import/resolver": {
