--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^1.6.6",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
@@ -13,15 +17,18 @@
     "@types/react-redux": "^7.1.16",
     "@types/react-select": "^4.0.13",
     "axios": "^0.21.1",
-    "comlink": "^4.3.1",
+    "framer-motion": "^4",
     "node-sass": "^5.0.0",
+    "raw-loader": "^4.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-redux": "^7.2.2",
+    "react-redux": "^7.2.4",
     "react-scripts": "4.0.2",
     "redux": "^4.0.5",
     "typescript": "^4.1.3",
-    "web-vitals": "^1.1.0"
+    "uuid": "^8.3.2",
+    "web-vitals": "^1.1.0",
+    "worker-loader": "^3.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
     "eslint": "^7.19.0",
