--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
     "@types/jest": "^26.0.20",
+    "@types/lodash": "^4.14.172",
     "@types/node": "^12.19.16",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
@@ -18,6 +19,7 @@
     "@types/react-select": "^4.0.13",
     "axios": "^0.21.1",
     "framer-motion": "^4",
+    "lodash": "^4.17.21",
     "node-sass": "^5.0.0",
     "raw-loader": "^4.0.2",
     "react": "^17.0.1",
